@@ -1,5 +1,5 @@
 Package: arm
-Version: 1.1-13.01
+Version: 1.1-13.02
 Date: 2008-7-21
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
