@@ -34,6 +34,7 @@ export(
        "G",
        "go",
        "invlogit",
+       "logit",
        "matching", 
        "model.matrix.bayes",
        "multicomp.plot",
